parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     expression -> vector
Rule 3     expression -> expression [ expression_list ]  [precedence=left, level=9]
Rule 4     expression -> ONES ( expression )
Rule 5     expression -> ZEROS ( expression )
Rule 6     expression -> EYE ( expression )
Rule 7     expression -> expression RANGE expression  [precedence=nonassoc, level=2]
Rule 8     expression -> expression TRANSPOSE  [precedence=left, level=8]
Rule 9     expression -> MINUS expression  [precedence=right, level=7]
Rule 10    expression -> ID
Rule 11    expression -> STRING
Rule 12    expression -> INTEGER
Rule 13    expression -> FLOAT
Rule 14    expression -> expression XOR expression  [precedence=left, level=3]
Rule 15    expression -> expression OR expression  [precedence=left, level=3]
Rule 16    expression -> expression AND expression  [precedence=left, level=3]
Rule 17    expression -> expression LESS_EQUAL expression  [precedence=left, level=4]
Rule 18    expression -> expression LESS expression  [precedence=left, level=4]
Rule 19    expression -> expression GREATER_EQUAL expression  [precedence=left, level=4]
Rule 20    expression -> expression GREATER expression  [precedence=left, level=4]
Rule 21    expression -> expression NOT_EQUAL expression  [precedence=left, level=4]
Rule 22    expression -> expression EQUAL expression  [precedence=left, level=4]
Rule 23    expression -> expression DOT_DIVIDE expression  [precedence=left, level=6]
Rule 24    expression -> expression DOT_TIMES expression  [precedence=left, level=6]
Rule 25    expression -> expression DOT_MINUS expression  [precedence=left, level=5]
Rule 26    expression -> expression DOT_PLUS expression  [precedence=left, level=5]
Rule 27    expression -> expression DIVIDE expression  [precedence=left, level=6]
Rule 28    expression -> expression TIMES expression  [precedence=left, level=6]
Rule 29    expression -> expression MINUS expression  [precedence=left, level=5]
Rule 30    expression -> expression PLUS expression  [precedence=left, level=5]
Rule 31    expression -> ( expression )
Rule 32    expression_list -> <empty>
Rule 33    expression_list -> expression_list , expression
Rule 34    expression_list -> expression
Rule 35    vector -> [ expression_list ]
Rule 36    statement -> { statement_list }
Rule 37    statement -> FOR ( ID ASSIGN expression ) statement
Rule 38    statement -> WHILE ( expression ) statement
Rule 39    statement -> IF ( expression ) statement ELSE statement  [precedence=nonassoc, level=11]
Rule 40    statement -> IF ( expression ) statement  [precedence=nonassoc, level=10]
Rule 41    statement -> expression DIVIDE_ASSIGN expression ;
Rule 42    statement -> expression TIMES_ASSIGN expression ;
Rule 43    statement -> expression MINUS_ASSIGN expression ;
Rule 44    statement -> expression PLUS_ASSIGN expression ;
Rule 45    statement -> expression ASSIGN expression ;
Rule 46    statement -> RETURN expression ;
Rule 47    statement -> PRINT ( expression_list ) ;
Rule 48    statement -> CONTINUE ;
Rule 49    statement -> BREAK ;
Rule 50    statement -> expression ;
Rule 51    statement_list -> statement_list statement
Rule 52    statement_list -> statement

Terminals, with rules where they appear:

(                    : 4 5 6 31 37 38 39 40 47
)                    : 4 5 6 31 37 38 39 40 47
,                    : 33
;                    : 41 42 43 44 45 46 47 48 49 50
AND                  : 16
ASSIGN               : 37 45
BREAK                : 49
CONTINUE             : 48
DIVIDE               : 27
DIVIDE_ASSIGN        : 41
DOT_DIVIDE           : 23
DOT_MINUS            : 25
DOT_PLUS             : 26
DOT_TIMES            : 24
ELSE                 : 39
EQUAL                : 22
EYE                  : 6
FLOAT                : 13
FOR                  : 37
GREATER              : 20
GREATER_EQUAL        : 19
ID                   : 10 37
IF                   : 39 40
INTEGER              : 12
LESS                 : 18
LESS_EQUAL           : 17
MINUS                : 9 29
MINUS_ASSIGN         : 43
NOT_EQUAL            : 21
ONES                 : 4
OR                   : 15
PLUS                 : 30
PLUS_ASSIGN          : 44
PRINT                : 47
RANGE                : 7
RETURN               : 46
STRING               : 11
TIMES                : 28
TIMES_ASSIGN         : 42
TRANSPOSE            : 8
WHILE                : 38
XOR                  : 14
ZEROS                : 5
[                    : 3 35
]                    : 3 35
error                : 
{                    : 36
}                    : 36

Nonterminals, with rules where they appear:

expression           : 3 4 5 6 7 7 8 9 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 33 34 37 38 39 40 41 41 42 42 43 43 44 44 45 45 46 50
expression_list      : 3 33 35 47
program              : 0
statement            : 37 38 39 39 40 51 52
statement_list       : 1 36 51
vector               : 2


state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (51) statement_list -> . statement_list statement
    (52) statement_list -> . statement
    (36) statement -> . { statement_list }
    (37) statement -> . FOR ( ID ASSIGN expression ) statement
    (38) statement -> . WHILE ( expression ) statement
    (39) statement -> . IF ( expression ) statement ELSE statement
    (40) statement -> . IF ( expression ) statement
    (41) statement -> . expression DIVIDE_ASSIGN expression ;
    (42) statement -> . expression TIMES_ASSIGN expression ;
    (43) statement -> . expression MINUS_ASSIGN expression ;
    (44) statement -> . expression PLUS_ASSIGN expression ;
    (45) statement -> . expression ASSIGN expression ;
    (46) statement -> . RETURN expression ;
    (47) statement -> . PRINT ( expression_list ) ;
    (48) statement -> . CONTINUE ;
    (49) statement -> . BREAK ;
    (50) statement -> . expression ;
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    RETURN          shift and go to state 11
    PRINT           shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 8
    vector                         shift and go to state 15

state 1

    (0) S' -> program .


state 2

    (1) program -> statement_list .
    (51) statement_list -> statement_list . statement
    (36) statement -> . { statement_list }
    (37) statement -> . FOR ( ID ASSIGN expression ) statement
    (38) statement -> . WHILE ( expression ) statement
    (39) statement -> . IF ( expression ) statement ELSE statement
    (40) statement -> . IF ( expression ) statement
    (41) statement -> . expression DIVIDE_ASSIGN expression ;
    (42) statement -> . expression TIMES_ASSIGN expression ;
    (43) statement -> . expression MINUS_ASSIGN expression ;
    (44) statement -> . expression PLUS_ASSIGN expression ;
    (45) statement -> . expression ASSIGN expression ;
    (46) statement -> . RETURN expression ;
    (47) statement -> . PRINT ( expression_list ) ;
    (48) statement -> . CONTINUE ;
    (49) statement -> . BREAK ;
    (50) statement -> . expression ;
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    $end            reduce using rule 1 (program -> statement_list .)
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    RETURN          shift and go to state 11
    PRINT           shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    statement                      shift and go to state 24
    expression                     shift and go to state 8
    vector                         shift and go to state 15

state 3

    (52) statement_list -> statement .
    {               reduce using rule 52 (statement_list -> statement .)
    FOR             reduce using rule 52 (statement_list -> statement .)
    WHILE           reduce using rule 52 (statement_list -> statement .)
    IF              reduce using rule 52 (statement_list -> statement .)
    RETURN          reduce using rule 52 (statement_list -> statement .)
    PRINT           reduce using rule 52 (statement_list -> statement .)
    CONTINUE        reduce using rule 52 (statement_list -> statement .)
    BREAK           reduce using rule 52 (statement_list -> statement .)
    ONES            reduce using rule 52 (statement_list -> statement .)
    ZEROS           reduce using rule 52 (statement_list -> statement .)
    EYE             reduce using rule 52 (statement_list -> statement .)
    MINUS           reduce using rule 52 (statement_list -> statement .)
    ID              reduce using rule 52 (statement_list -> statement .)
    STRING          reduce using rule 52 (statement_list -> statement .)
    INTEGER         reduce using rule 52 (statement_list -> statement .)
    FLOAT           reduce using rule 52 (statement_list -> statement .)
    (               reduce using rule 52 (statement_list -> statement .)
    [               reduce using rule 52 (statement_list -> statement .)
    $end            reduce using rule 52 (statement_list -> statement .)
    }               reduce using rule 52 (statement_list -> statement .)


state 4

    (36) statement -> { . statement_list }
    (51) statement_list -> . statement_list statement
    (52) statement_list -> . statement
    (36) statement -> . { statement_list }
    (37) statement -> . FOR ( ID ASSIGN expression ) statement
    (38) statement -> . WHILE ( expression ) statement
    (39) statement -> . IF ( expression ) statement ELSE statement
    (40) statement -> . IF ( expression ) statement
    (41) statement -> . expression DIVIDE_ASSIGN expression ;
    (42) statement -> . expression TIMES_ASSIGN expression ;
    (43) statement -> . expression MINUS_ASSIGN expression ;
    (44) statement -> . expression PLUS_ASSIGN expression ;
    (45) statement -> . expression ASSIGN expression ;
    (46) statement -> . RETURN expression ;
    (47) statement -> . PRINT ( expression_list ) ;
    (48) statement -> . CONTINUE ;
    (49) statement -> . BREAK ;
    (50) statement -> . expression ;
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    RETURN          shift and go to state 11
    PRINT           shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    statement_list                 shift and go to state 25
    statement                      shift and go to state 3
    expression                     shift and go to state 8
    vector                         shift and go to state 15

state 5

    (37) statement -> FOR . ( ID ASSIGN expression ) statement
    (               shift and go to state 26


state 6

    (31) expression -> ( . expression )
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    expression                     shift and go to state 27
    vector                         shift and go to state 15

state 7

    (10) expression -> ID .
    DIVIDE_ASSIGN   reduce using rule 10 (expression -> ID .)
    TIMES_ASSIGN    reduce using rule 10 (expression -> ID .)
    MINUS_ASSIGN    reduce using rule 10 (expression -> ID .)
    PLUS_ASSIGN     reduce using rule 10 (expression -> ID .)
    ASSIGN          reduce using rule 10 (expression -> ID .)
    ;               reduce using rule 10 (expression -> ID .)
    [               reduce using rule 10 (expression -> ID .)
    RANGE           reduce using rule 10 (expression -> ID .)
    TRANSPOSE       reduce using rule 10 (expression -> ID .)
    XOR             reduce using rule 10 (expression -> ID .)
    OR              reduce using rule 10 (expression -> ID .)
    AND             reduce using rule 10 (expression -> ID .)
    LESS_EQUAL      reduce using rule 10 (expression -> ID .)
    LESS            reduce using rule 10 (expression -> ID .)
    GREATER_EQUAL   reduce using rule 10 (expression -> ID .)
    GREATER         reduce using rule 10 (expression -> ID .)
    NOT_EQUAL       reduce using rule 10 (expression -> ID .)
    EQUAL           reduce using rule 10 (expression -> ID .)
    DOT_DIVIDE      reduce using rule 10 (expression -> ID .)
    DOT_TIMES       reduce using rule 10 (expression -> ID .)
    DOT_MINUS       reduce using rule 10 (expression -> ID .)
    DOT_PLUS        reduce using rule 10 (expression -> ID .)
    DIVIDE          reduce using rule 10 (expression -> ID .)
    TIMES           reduce using rule 10 (expression -> ID .)
    MINUS           reduce using rule 10 (expression -> ID .)
    PLUS            reduce using rule 10 (expression -> ID .)
    )               reduce using rule 10 (expression -> ID .)
    ]               reduce using rule 10 (expression -> ID .)
    ,               reduce using rule 10 (expression -> ID .)


state 8

    (41) statement -> expression . DIVIDE_ASSIGN expression ;
    (42) statement -> expression . TIMES_ASSIGN expression ;
    (43) statement -> expression . MINUS_ASSIGN expression ;
    (44) statement -> expression . PLUS_ASSIGN expression ;
    (45) statement -> expression . ASSIGN expression ;
    (50) statement -> expression . ;
    (3) expression -> expression . [ expression_list ]
    (7) expression -> expression . RANGE expression
    (8) expression -> expression . TRANSPOSE
    (14) expression -> expression . XOR expression
    (15) expression -> expression . OR expression
    (16) expression -> expression . AND expression
    (17) expression -> expression . LESS_EQUAL expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATER_EQUAL expression
    (20) expression -> expression . GREATER expression
    (21) expression -> expression . NOT_EQUAL expression
    (22) expression -> expression . EQUAL expression
    (23) expression -> expression . DOT_DIVIDE expression
    (24) expression -> expression . DOT_TIMES expression
    (25) expression -> expression . DOT_MINUS expression
    (26) expression -> expression . DOT_PLUS expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . PLUS expression
    DIVIDE_ASSIGN   shift and go to state 28
    TIMES_ASSIGN    shift and go to state 30
    MINUS_ASSIGN    shift and go to state 31
    PLUS_ASSIGN     shift and go to state 32
    ASSIGN          shift and go to state 33
    ;               shift and go to state 29
    [               shift and go to state 34
    RANGE           shift and go to state 35
    TRANSPOSE       shift and go to state 36
    XOR             shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    LESS_EQUAL      shift and go to state 40
    LESS            shift and go to state 41
    GREATER_EQUAL   shift and go to state 42
    GREATER         shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    EQUAL           shift and go to state 45
    DOT_DIVIDE      shift and go to state 46
    DOT_TIMES       shift and go to state 47
    DOT_MINUS       shift and go to state 48
    DOT_PLUS        shift and go to state 49
    DIVIDE          shift and go to state 50
    TIMES           shift and go to state 51
    MINUS           shift and go to state 52
    PLUS            shift and go to state 53


state 9

    (38) statement -> WHILE . ( expression ) statement
    (               shift and go to state 54


state 10

    (39) statement -> IF . ( expression ) statement ELSE statement
    (40) statement -> IF . ( expression ) statement
    (               shift and go to state 55


state 11

    (46) statement -> RETURN . expression ;
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    expression                     shift and go to state 56
    vector                         shift and go to state 15

state 12

    (47) statement -> PRINT . ( expression_list ) ;
    (               shift and go to state 57


state 13

    (48) statement -> CONTINUE . ;
    ;               shift and go to state 58


state 14

    (49) statement -> BREAK . ;
    ;               shift and go to state 59


state 15

    (2) expression -> vector .
    DIVIDE_ASSIGN   reduce using rule 2 (expression -> vector .)
    TIMES_ASSIGN    reduce using rule 2 (expression -> vector .)
    MINUS_ASSIGN    reduce using rule 2 (expression -> vector .)
    PLUS_ASSIGN     reduce using rule 2 (expression -> vector .)
    ASSIGN          reduce using rule 2 (expression -> vector .)
    ;               reduce using rule 2 (expression -> vector .)
    [               reduce using rule 2 (expression -> vector .)
    RANGE           reduce using rule 2 (expression -> vector .)
    TRANSPOSE       reduce using rule 2 (expression -> vector .)
    XOR             reduce using rule 2 (expression -> vector .)
    OR              reduce using rule 2 (expression -> vector .)
    AND             reduce using rule 2 (expression -> vector .)
    LESS_EQUAL      reduce using rule 2 (expression -> vector .)
    LESS            reduce using rule 2 (expression -> vector .)
    GREATER_EQUAL   reduce using rule 2 (expression -> vector .)
    GREATER         reduce using rule 2 (expression -> vector .)
    NOT_EQUAL       reduce using rule 2 (expression -> vector .)
    EQUAL           reduce using rule 2 (expression -> vector .)
    DOT_DIVIDE      reduce using rule 2 (expression -> vector .)
    DOT_TIMES       reduce using rule 2 (expression -> vector .)
    DOT_MINUS       reduce using rule 2 (expression -> vector .)
    DOT_PLUS        reduce using rule 2 (expression -> vector .)
    DIVIDE          reduce using rule 2 (expression -> vector .)
    TIMES           reduce using rule 2 (expression -> vector .)
    MINUS           reduce using rule 2 (expression -> vector .)
    PLUS            reduce using rule 2 (expression -> vector .)
    )               reduce using rule 2 (expression -> vector .)
    ]               reduce using rule 2 (expression -> vector .)
    ,               reduce using rule 2 (expression -> vector .)


state 16

    (35) vector -> [ . expression_list ]
    (32) expression_list -> .
    (33) expression_list -> . expression_list , expression
    (34) expression_list -> . expression
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    ]               reduce using rule 32 (expression_list -> .)
    ,               reduce using rule 32 (expression_list -> .)
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    expression_list                shift and go to state 60
    expression                     shift and go to state 61
    vector                         shift and go to state 15

state 17

    (4) expression -> ONES . ( expression )
    (               shift and go to state 62


state 18

    (5) expression -> ZEROS . ( expression )
    (               shift and go to state 63


state 19

    (6) expression -> EYE . ( expression )
    (               shift and go to state 64


state 20

    (9) expression -> MINUS . expression
    (2) expression -> . vector
    (3) expression -> . expression [ expression_list ]
    (4) expression -> . ONES ( expression )
    (5) expression -> . ZEROS ( expression )
    (6) expression -> . EYE ( expression )
    (7) expression -> . expression RANGE expression
    (8) expression -> . expression TRANSPOSE
    (9) expression -> . MINUS expression
    (10) expression -> . ID
    (11) expression -> . STRING
    (12) expression -> . INTEGER
    (13) expression -> . FLOAT
    (14) expression -> . expression XOR expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression LESS_EQUAL expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATER_EQUAL expression
    (20) expression -> . expression GREATER expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression EQUAL expression
    (23) expression -> . expression DOT_DIVIDE expression
    (24) expression -> . expression DOT_TIMES expression
    (25) expression -> . expression DOT_MINUS expression
    (26) expression -> . expression DOT_PLUS expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression PLUS expression
    (31) expression -> . ( expression )
    (35) vector -> . [ expression_list ]
    ONES            shift and go to state 17
    ZEROS           shift and go to state 18
    EYE             shift and go to state 19
    MINUS           shift and go to state 20
    ID              shift and go to state 7
    STRING          shift and go to state 21
    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    (               shift and go to state 6
    [               shift and go to state 16

    expression                     shift and go to state 65
    vector                         shift and go to state 15

state 21

    (11) expression -> STRING .
    DIVIDE_ASSIGN   reduce using rule 11 (expression -> STRING .)
    TIMES_ASSIGN    reduce using rule 11 (expression -> STRING .)
    MINUS_ASSIGN    reduce using rule 11 (expression -> STRING .)
    PLUS_ASSIGN     reduce using rule 11 (expression -> STRING .)
    ASSIGN          reduce using rule 11 (expression -> STRING .)
    ;               reduce using rule 11 (expression -> STRING .)
    [               reduce using rule 11 (expression -> STRING .)
    RANGE           reduce using rule 11 (expression -> STRING .)
    TRANSPOSE       reduce using rule 11 (expression -> STRING .)
    XOR             reduce using rule 11 (expression -> STRING .)
    OR              reduce using rule 11 (expression -> STRING .)
    AND             reduce using rule 11 (expression -> STRING .)
    LESS_EQUAL      reduce using rule 11 (expression -> STRING .)
    LESS            reduce using rule 11 (expression -> STRING .)
    GREATER_EQUAL   reduce using rule 11 (expression -> STRING .)
    GREATER         reduce using rule 11 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 11 (expression -> STRING .)
    EQUAL           reduce using rule 11 (expression -> STRING .)
    DOT_DIVIDE      reduce using rule 11 (expression -> STRING .)
    DOT_TIMES       reduce using rule 11 (expression -> STRING .)
    DOT_MINUS       reduce using rule 11 (expression -> STRING .)
    DOT_PLUS        reduce using rule 11 (expression -> STRING .)
    DIVIDE          reduce using rule 11 (expression -> STRING .)
    TIMES           reduce using rule 11 (expression -> STRING .)
    MINUS           reduce using rule 11 (expression -> STRING .)
    PLUS            reduce using rule 11 (expression -> STRING .)
    )               reduce using rule 11 (expression -> STRING .)
    ]               reduce using rule 11 (expression -> STRING .)
    ,               reduce using rule 11 (expression -> STRING .)


state 22

    (12) expression -> INTEGER .
    DIVIDE_ASSIGN   reduce using rule 12 (expression -> INTEGER .)
    TIMES_ASSIGN    reduce using rule 12 (expression -> INTEGER .)
    MINUS_ASSIGN    reduce using rule 12 (expression -> INTEGER .)
    PLUS_ASSIGN     reduce using rule 12 (expression -> INTEGER .)
    ASSIGN          reduce using rule 12 (expression -> INTEGER .)
    ;               reduce using rule 12 (expression -> INTEGER .)
    [               reduce using rule 12 (expression -> INTEGER .)
    RANGE           reduce using rule 12 (expression -> INTEGER .)
    TRANSPOSE       reduce using rule 12 (expression -> INTEGER .)
    XOR             reduce using rule 12 (expression -> INTEGER .)
    OR              reduce using rule 12 (expression -> INTEGER .)
    AND             reduce using rule 12 (expression -> INTEGER .)
    LESS_EQUAL      reduce using rule 12 (expression -> INTEGER .)
    LESS            reduce using rule 12 (expression -> INTEGER .)
    GREATER_EQUAL   reduce using rule 12 (expression -> INTEGER .)
    GREATER         reduce using rule 12 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 12 (expression -> INTEGER .)
    EQUAL           reduce using rule 12 (expression -> INTEGER .)
    DOT_DIVIDE      reduce using rule 12 (expression -> INTEGER .)
    DOT_TIMES       reduce using rule 12 (expression -> INTEGER .)
    DOT_MINUS       reduce using rule 12 (expression -> INTEGER .)
    DOT_PLUS        reduce using rule 12 (expression -> INTEGER .)
    DIVIDE          reduce using rule 12 (expression -> INTEGER .)
    TIMES           reduce using rule 12 (expression -> INTEGER .)
    MINUS           reduce using rule 12 (expression -> INTEGER .)
    PLUS            reduce using rule 12 (expression -> INTEGER .)
    )               reduce using rule 12 (expression -> INTEGER .)
    ]               reduce using rule 12 (expression -> INTEGER .)
    ,               reduce using rule 12 (expression -> INTEGER .)


state 23
